--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/instrument-sans": "^5.2.5",
     "@fontsource/inter": "^5.2.5",
     "framer-motion": "^12.10.5",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
