--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-VITE_EMAILJS_SERVICE_ID=service_thbdelg
-VITE_EMAILJS_TEMPLATE_ID=template_ojp3fnl
-VITE_EMAILJS_PUBLIC_KEY=zyLvGDfxRGPxFsTc8
+VITE_EMAILJS_SERVICE_ID=service_okq3dcd
+VITE_EMAILJS_TEMPLATE_ID=template_hds5vri
+VITE_EMAILJS_PUBLIC_KEY=KBUe2RdPLUH8fGq3V
 
+
+VITE_BACKEND_URL=https://miss-muse-backend.vercel.app
 
 # VITE_EMAILJS_SERVICE_ID=service_okq3dcd
 # VITE_EMAILJS_TEMPLATE_ID=template_hds5vri
