--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.544.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-intersection-observer": "^9.16.0",
     "swiper": "^11.2.6",
     "vite-plugin-svgr": "^4.3.0"
